@@ -226,14 +226,13 @@ HOOK_METHOD(Console, RunCommand, (std_string& in, std_string* out, Entity_Player
 	super(in, out, player);
 }
 
-const char* suffixes[36] = {
-	"",
+const char* suffixes[35] = {
 	"_basement",
 	"_cellar",
 	"_burningbasement",
 	"_caves",
 	"_catacombs",
-	"_floodedcaves",
+	"_downpour", // rip
 	"_depths",
 	"_necropolis",
 	"_dankdepths",
@@ -265,11 +264,28 @@ const char* suffixes[36] = {
 	"_home"
 };
 
+// helper for asm patch
+bool dealRoomsPatched[2] = { false, false };
+
 HOOK_METHOD(RoomConfig, LoadStageBinary, (unsigned int Stage, unsigned int Mode) -> void) {
 	super(Stage, Mode);
 
-	if (Stage < 36) {
-		this->_stages[Stage]._suffix = suffixes[Stage];
+	if (Stage == 0) {
+		if (!dealRoomsPatched[Mode]) {
+			unsigned int doors = 0;
+			for (int i = 14; i < 16; i++) {
+				//printf("type #%d\n", i);
+				RoomConfigRoomPtrVector rooms = g_Game->_roomConfig.GetRooms(0, i, 13, 100, 100, 0, 20, &doors, 0, Mode);
+				for (RoomConfig_Room* p : rooms) {
+					//printf("changing subtype of roomconfig at %p (var %d, subtype %d)\n", p, p->Variant, p->Subtype);
+					p->Subtype = 666;
+				}
+			}
+			dealRoomsPatched[Mode] = true;
+		}
+	}
+	else if (Stage < 36) {
+		this->_stages[Stage]._suffix = suffixes[Stage-1];
 	}
 }
 
